--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 section {
-    margin-top: 15px;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@ section {
 
 h1 {
     color: cornsilk;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     font-weight: 900;
     font-size: 34px;
     line-height: 1.36;
@@ -23,18 +23,26 @@ h1 {
 
 .div {
     display: inline-block;
-    width: 60vw;
-    height: 85vh;
+    width: 1280px;
+    height: 869px;
     margin-left: 30px;
     margin-right: 30px;
     background-image: 
 
-    url('./image/1.png'), 
-    url('./image/2.png'), 
-    url('./image/3.png')
-
+    /* url('./image/1.png'),  */
+    /* url('./image/2.png'),  */
+    /* url('./image/3.png'), */
+    /* url('./image/4.png'), */
+    /* url('./image/5.png'), */
+    /* url('./image/6.png'), */
+    /* url('./image/7.png'), */
+    /* url('./image/8.png'), */
+    /* url('./image/9.png'), */
+    /* url('./image/finish.png'), */
+    /* url('./image/bridge.png'), */
+    /* url('./image/start.png') */
 
     ;
-    background-size: contain, contain, contain;
+    background-size: contain, contain, contain, contain, contain, contain, contain, contain, contain, contain, contain, contain, contain, contain, contain, contain;
     background-repeat: no-repeat;
 }
