--- a/index.css
+++ b/index.css
@@ -1,48 +1,49 @@
-
 body {
-    background-image: url('./image/fon.jpg');
+  background-image: url("./fon.jpg");
 }
 
 section {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin-top: 30px;
+  margin-left: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-    color: cornsilk;
-    margin-bottom: 30px;
-    font-weight: 900;
-    font-size: 34px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  color: cornsilk;
+  margin-bottom: 30px;
+  font-weight: 900;
+  font-size: 34px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .div {
-    display: block;
-    width: 100vw;
-    height: 869px;
-    background-image: 
+  display: block;
+  width: 100vw;
+  height: 900px;
+  background-image: 
 
     /* url('./image/1.png'),  */
     /* url('./image/2.png'),  */
     /* url('./image/3.png'), */
-    /* url('./image/4.png'), */
-    /* url('./image/5.png'), */
-    /* url('./image/6.png'), */
-    /* url('./image/7.png'), */
+    /* url('./image/4.png'),  */
+    /* url("./image/5.png"),  */
+    /* url("./image/6.png"), */
+    /* url('./image/7.png'),  */
     /* url('./image/8.png'), */
-    /* url('./image/9.png'), */
+    /* url('./image/9.png'),  */
+    /* url('./image/10.png'), */
     /* url('./image/finish.png'), */
-    /* url('./image/bridge.png'), */
-    /* url('./image/start.png') */
-
+    /* url('./image/bridge.png'), */ 
+    /* url('./image/start.png')  */
+    
     ;
-    background-size: contain;
-    background-repeat: no-repeat;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 @media screen and (min-width: 1280px) {
